--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ data2d/stones2DA4C1-18,0.dgibi-gran.txt
 *.png
 scripts/data2d/stones2DA0C1-25,0.dgibi-gran.txt
 *.bin
+data2d/stones2DA0C1-18,0.dgibi-gran.txt
