--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ mecanico.py
 termico/18,0/termico.py
 termico/18,3/termico.py
 termico/18,4/termico.py
+data2d/stones2DA0C1-19,0.dgibi-gran.txt
+data2d/stones2DA1C1-19,0.dgibi-gran.txt
+data2d/stones2DA3C1-19,0.dgibi-gran.txt
+data2d/stones2DA4C1-19,0.dgibi-gran.txt
