--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,7 @@ data2d/stones2DA0C1-19,0.dgibi-gran.txt
 data2d/stones2DA1C1-19,0.dgibi-gran.txt
 data2d/stones2DA3C1-19,0.dgibi-gran.txt
 data2d/stones2DA4C1-19,0.dgibi-gran.txt
+data2d/stones2DA2C1-18,0.dgibi-gran.txt
+termico-mecanico/18.0/termico.py
+termico-mecanico/18.3/termico.py
+termico-mecanico/18.4/termico.py
