--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@ data2d/stones2DA2C1-18,0.dgibi-gran.txt
 termico-mecanico/18.0/termico.py
 termico-mecanico/18.3/termico.py
 termico-mecanico/18.4/termico.py
+termico-mecanico/48.4/termico.py
+data2d/stones2DA4C1-48,0.dgibi-gran.txt
